[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/NPC's/character8.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NPC-scripts/testFireGuy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Hit-HurtBox/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Enemies/EnemyStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Dialog/DialogBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Enemies/PlayerDetectionArea.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 60.531

[node name="testFireGuy" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="DialogBox" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -62.0
margin_top = -50.0
margin_right = -62.0
margin_bottom = -50.0

[node name="Polygon2D" parent="DialogBox" index="0"]
position = Vector2( -1, 3 )

[node name="RichTextLabel" parent="DialogBox/Polygon2D" index="0"]
margin_left = 7.0
margin_right = 471.0

[node name="Timer" parent="DialogBox" index="1"]
autostart = true

[node name="PlayerDetectionArea" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 6 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
position = Vector2( 0, 12 )
shape = SubResource( 2 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_exited"]

[editable path="HurtBox"]
[editable path="DialogBox"]
[editable path="PlayerDetectionArea"]
